--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,3 @@
-/* General Styles */
 body {
   font-family: "Poppins", sans-serif;
   text-align: center;
@@ -34,7 +33,7 @@ h1 {
   color: #333;
   margin-bottom: 10px;
 
-  margin: 0; /* Removes unnecessary margin to fit content properly */
+  margin: 0; 
   padding: 5px;
 }
 
@@ -70,7 +69,7 @@ h1 {
 }
 
 
-[data-testid="color-btn"] {
+[data-testid="colorOption"] {
   width: 70px;
   height: 70px;
   border: none;
@@ -79,7 +78,7 @@ h1 {
   transition: transform 0.2s, box-shadow 0.2s;
 }
 
-[data-testid="color-btn"]:hover {
+[data-testid="colorOption"]:hover {
   transform: scale(1.1);
   box-shadow: 0 0 8px rgba(0, 0, 0, 0.3);
 }
@@ -95,7 +94,7 @@ h1 {
   visibility: visible;
 }
 
-/* Apply this class dynamically to fade out */
+
 .fade-out {
   opacity: 0;
   visibility: hidden;
